# -*- coding: utf-8 -*-
[metadata]
name = pyrandall
description = pyrandall is testing command line tool for streaming architectures
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, kafka, stream-processors, bdd, testing
maintainer = Stefano Oldeman, Wouter Theune
author = Stefano Oldeman, Wouter Theune and others
url = https://gitub.com/kpn/pyrandall
project_urls =
    Source=https://gitub.com/kpn/pyrandall
    Tracker=https://github.com/kpn/pyrandall/issues
platforms = any
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[pycodestyle]
max-line-length = 119

[tool:pytest]
timeout = 300

[bdist_wheel]
universal = 1
